# python-cookiecutter

./: .gitignore  .mergify.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  cookiecutter.json  tasks.py
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .coafile  .coveragerc  .dockerignore  .gitignore  .mergify.yml  .pylintrc  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  Makefile  README.rst  environment.yml  noxfile.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
{{cookiecutter.project_name}}/.circleci/: config.yml  init-gh-pages.sh  publish.sh
{{cookiecutter.project_name}}/.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_name}}/contrib/: {{cookiecutter.project_name}}-complete.sh
{{cookiecutter.project_name}}/docs/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
{{cookiecutter.project_name}}/docs/source/_static/: custom.css
{{cookiecutter.project_name}}/docs/source/api/: modules.rst  {{ cookiecutter.project_name }}.core.rst
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: config.py  main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/cli/: base.py  cli.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/core/: version.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
{{cookiecutter.repo_name}}/: .coafile  .coveragerc  .gitignore  .pylintrc  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  yapf-check.sh
{{cookiecutter.repo_name}}/.circleci/: config.yml
{{cookiecutter.repo_name}}/.github/: CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md
{{cookiecutter.repo_name}}/doc/source/: conf.py
{{cookiecutter.repo_name}}/docs/source/: conf.py
{{cookiecutter.repo_name}}/requirements/: _base.txt  _static.txt  _tests.txt  base.txt  local.txt  testing.txt
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: commands.py  config.py  main.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/cli/: base.py  cli.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/contrib/: {{cookiecutter.repo_name}}-complete.sh
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}.py
