[metadata]
name = {{ cookiecutter.project_name }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = {{ cookiecutter.author }}
author-email = {{ cookiecutter.author_email }}
home-page = http://www.{{ cookiecutter.project_name }}.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
data_files =
  etc/bash_completion.d/ = contrib/{{ cookiecutter.project_name }}-complete.sh

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[entry_points]
console_scripts =
    {{ cookiecutter.project_name }} = {{ cookiecutter.project_name }}.cli.cli:cli

[pbr]
builder = html,text
skip_authors = True
skip_changelog = True
all_files = 1

[wheel]
universal = 0
