[metadata]
name = {{ cookiecutter.repo_name }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = {{ cookiecutter.author }}
author-email = {{ cookiecutter.author_email }}
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[entry_points]
console_scripts =
    {{ cookiecutter.repo_name }} = {{ cookiecutter.repo_name }}.cli.cli:cli

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[wheel]
universal = 0
